--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -2,7 +2,13 @@
   "pages": [
     "pages/index/main",
     "pages/logs/main",
-    "pages/counter/main"
+    "pages/counter/main",
+    "pages/myOrder/main",
+    "pages/orderDetail/main",
+    "pages/couponView/main",
+    "pages/addressView/main",
+    "pages/attestationView/main",
+    "pages/addAddress/main"   
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -19,13 +25,13 @@
     "list": [{
       "text": "首页",
       "pagePath": "pages/index/main",
-      "iconPath": "static/tabs/home.png",
-      "selectedIconPath": "static/tabs/home-active.png"
+      "iconPath": "static/images/shouye.png",
+      "selectedIconPath": "static/images/shouye_active.png"
     }, {
-      "text": "订单",
+      "text": "我的",
       "pagePath": "pages/logs/main",
-      "iconPath": "static/tabs/orders.png",
-      "selectedIconPath": "static/tabs/orders-active.png"
+      "iconPath": "static/images/my.png",
+      "selectedIconPath": "static/images/my_active.png"
     }],
 
     "items": [{
@@ -34,7 +40,7 @@
       "icon": "static/tabs/home.png",
       "activeIcon": "static/tabs/home-active.png"
     }, {
-      "name": "订单",
+      "name": "我的",
       "pagePath": "pages/logs/main",
       "icon": "static/tabs/orders.png",
       "activeIcon": "static/tabs/orders-active.png"
