--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -1,13 +1,16 @@
 {
   "pages": [
     "pages/index/main",
+    "pages/certification/main",
+    "pages/search/main",
+    "pages/dissertation/main",
     "pages/logs/main",
     "pages/counter/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
     "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
+    "navigationBarTitleText": "心蓉优品",
     "navigationBarTextStyle": "black"
   },
   "tabBar": {
@@ -22,7 +25,7 @@
       "iconPath": "static/tabs/home.png",
       "selectedIconPath": "static/tabs/home-active.png"
     }, {
-      "text": "订单",
+      "text": "我的",
       "pagePath": "pages/logs/main",
       "iconPath": "static/tabs/orders.png",
       "selectedIconPath": "static/tabs/orders-active.png"
@@ -34,7 +37,7 @@
       "icon": "static/tabs/home.png",
       "activeIcon": "static/tabs/home-active.png"
     }, {
-      "name": "订单",
+      "name": "我的",
       "pagePath": "pages/logs/main",
       "icon": "static/tabs/orders.png",
       "activeIcon": "static/tabs/orders-active.png"
