商品详情,分享页面，提交订单样式

--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -1,6 +1,9 @@
 {
   "pages": [
     "pages/index/main",
+    "pages/CommodityDetails/main",
+    "pages/sharingPages/main",
+    "pages/placeOrder/main",
     "pages/logs/main",
     "pages/counter/main"
   ],
