--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
-    "pages/classify/main",
     "pages/index/main",
+    "pages/classify/main",
     "pages/certification/main",
     "pages/search/main",
     "pages/dissertation/main",
@@ -15,7 +15,7 @@
     "pages/couponView/main",
     "pages/addressView/main",
     "pages/attestationView/main",
-    "pages/addAddress/main"   
+    "pages/addAddress/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
@@ -29,29 +29,35 @@
     "selectedColor": "#333",
     "borderStyle": "white",
 
-    "list": [{
-      "text": "首页",
-      "pagePath": "pages/index/main",
-      "iconPath": "static/images/shouye.png",
-      "selectedIconPath": "static/images/shouye_active.png"
-    }, {
-      "text": "我的",
-      "pagePath": "pages/logs/main",
-      "iconPath": "static/images/my.png",
-      "selectedIconPath": "static/images/my_active.png"
-    }],
+    "list": [
+      {
+        "text": "首页",
+        "pagePath": "pages/index/main",
+        "iconPath": "static/images/shouye.png",
+        "selectedIconPath": "static/images/shouye_active.png"
+      },
+      {
+        "text": "我的",
+        "pagePath": "pages/logs/main",
+        "iconPath": "static/images/my.png",
+        "selectedIconPath": "static/images/my_active.png"
+      }
+    ],
 
-    "items": [{
-      "name": "首页",
-      "pagePath": "pages/index/main",
-      "icon": "static/tabs/home.png",
-      "activeIcon": "static/tabs/home-active.png"
-    }, {
-      "name": "我的",
-      "pagePath": "pages/logs/main",
-      "icon": "static/tabs/orders.png",
-      "activeIcon": "static/tabs/orders-active.png"
-    }],
+    "items": [
+      {
+        "name": "首页",
+        "pagePath": "pages/index/main",
+        "icon": "static/tabs/home.png",
+        "activeIcon": "static/tabs/home-active.png"
+      },
+      {
+        "name": "我的",
+        "pagePath": "pages/logs/main",
+        "icon": "static/tabs/orders.png",
+        "activeIcon": "static/tabs/orders-active.png"
+      }
+    ],
     "position": "bottom"
   }
 }
