--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -1,7 +1,6 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/certification/main",
     "pages/search/main",
     "pages/dissertation/main",
     "pages/CommodityDetails/main",
@@ -14,7 +13,11 @@
     "pages/couponView/main",
     "pages/addressView/main",
     "pages/attestationView/main",
-    "pages/addAddress/main"   
+    "pages/addAddress/main",
+    "pages/transactionView/main",   
+    "pages/recommenderView/main",
+    "pages/bindingiPhone/main",
+    "pages/transactionDetail/main"
   ],
   "window": {
     "backgroundTextStyle": "light",
