--- a/Prosperity/project.config.json
+++ b/Prosperity/project.config.json
@@ -41,17 +41,13 @@
 			"list": []
 		},
 		"miniprogram": {
-			"current": 4,
+			"current": 10,
 			"list": [
-				{
-					"id": 0,
-					"name": "首页",
-					"pathName": "pages/index/main"
-				},
 				{
 					"id": 10,
 					"name": "个人中心",
-					"pathName": "pages/logs/main"
+					"pathName": "pages/logs/main",
+					"query": ""
 				},
 				{
 					"id": 1,
@@ -63,8 +59,11 @@
 				{
 					"id": 5,
 					"name": "实名认证",
-					"pathName": "pages/certification/main"
-				},{
+					"pathName": "pages/attestationView/main",
+					"query": "",
+					"scene": null
+				},
+				{
 					"id": 9,
 					"name": "分享页面",
 					"pathName": "pages/sharingPages/main",
@@ -79,7 +78,7 @@
 					"scene": null
 				},
 				{
-					"id":3,
+					"id": 3,
 					"name": "专题页面",
 					"pathName": "pages/dissertation/main",
 					"query": "",
@@ -100,14 +99,23 @@
 					"scene": null
 				},
 				{
-					"id":7,
+					"id": 7,
 					"name": "搜索",
 					"pathName": "pages/search/main",
 					"query": ""
-				},{
+				},
+				{
 					"id": 8,
 					"name": "提交订单",
 					"pathName": "pages/placeOrder/main",
+					"query": "",
+					"scene": null
+				},
+				{
+					"id": -1,
+					"name": "优惠券列表",
+					"pathName": "pages/couponView/main",
+					"query": "",
 					"scene": null
 				}
 			]
