--- a/Prosperity/src/app.json
+++ b/Prosperity/src/app.json
@@ -1,7 +1,7 @@
 {
   "pages": [
     "pages/index/main",
-    "pages/certification/main",
+
     "pages/search/main",
     "pages/dissertation/main",
     "pages/CommodityDetails/main",
@@ -17,10 +17,12 @@
     "pages/addAddress/main"   
   ],
   "window": {
-    "backgroundTextStyle": "light",
+    "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#fff",
     "navigationBarTitleText": "积纳有品",
-    "navigationBarTextStyle": "black"
+    "navigationBarTextStyle": "black",
+    "enablePullDownRefresh":true,
+    "onReachBottomDistance":5
   },
   "tabBar": {
     "color": "#999",
